# ghosts-in-the-code

./: OLLAMA_DEMO.md  README.md  SECURITY.md  TLDR.md  blog.md  blog2.md  pyproject.toml
docs/: intent-is-biased.md
examples/: demo.py
src/blackbox_ai/: cli.py  errors.py  main.py  replay.py  state.py
src/blackbox_ai/api/: admin.py
src/blackbox_ai/telemetry/: embeddings.py  models.py
steps/: README.md
steps/01-pass-through-relay/: README.md  app.py
steps/02-two-plane-capture/: README.md  app.py
steps/03-parsers-and-intent/: README.md  app.py
steps/04-vector-time-travel/: README.md
steps/05-queryable-encryption/: README.md
steps/06-cache-and-replay/: README.md
steps/07-production-hardening/: README.md
tests/: conftest.py  test_replay.py
